[package]
name = "ExperimentManagementSystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.36.2", features = ["lazy","diagonal_concat"]}
regex = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"

argmin = { version = "0.9" }
argmin-math = { version = "0.3", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
argmin_testfunctions = "0.1.1"

chrono = { version = "0.4", features = ["serde"] }

rand = "0.8.5"
rand_xoshiro = "0.6.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]