[tool.poetry]
name = "gems-python"
version = "0.1.2"
description = ""
authors = ["CAB314 <85389241+CAB314@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.3.0"
simanneal = "^0.5.0"
matplotlib = "^3.9.1"
watchdog = "^4.0.1"
networkx = "^3.3"
scipy = "^1.14.0"
typing-extensions = "^4.12.2"
cmd2 = "^2.5.0"
sphinx = "^8.2.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
